Chat multiventana con contactos. Lectura y escritura mediante timer

--- a/chat.ini
+++ b/chat.ini
@@ -1,11 +1,15 @@
 [CONFIG]
 mi_numero = 2974
-height = 733
-width = 599
-x = 305
-y = 113
+mi_clave = tralala
+height = 609
+width = 720
+x = 36
+y = 32
 puerto = 3333
 
 [CONTACTOS]
 192.168.5.51 = javi
+192.168.0.12 = javi
+192.168.0.104 = javi
+192.168.0.10 = rasp3
 
